test: restructured the tests to minimize duplicated code